re PR rtl-optimization/11662 (wrong code for expr. with cast to long long and exclusive or)

PR optimization/11662
	Backport from mainline:

	2003-07-10  Denis Chertykov  <denisc@overta.ru>
	            Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* combine.c (gen_binary): Handle the CLOBBER rtx and
	don't build a binary operation with it.

From-SVN: r71164